[gd_scene load_steps=3 format=3 uid="uid://d0udvysmco4v1"]

[ext_resource type="Script" path="res://Main.gd" id="1_p8eam"]
[ext_resource type="Texture2D" uid="uid://ce0dno78ktfes" path="res://assets/GameField.png" id="2_4wlev"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_p8eam")

[node name="GameTimer" type="Timer" parent="."]

[node name="PressedTimer" type="Timer" parent="."]

[node name="GameField" type="Sprite2D" parent="."]
position = Vector2(384, 624)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_4wlev")

[node name="SpeedLable" type="Label" parent="."]
offset_left = 192.0
offset_top = 72.0
offset_right = 288.0
offset_bottom = 120.0
theme_type_variation = &"HeaderLarge"
text = "Speed: 1"
vertical_alignment = 1

[node name="ScoreLable" type="Label" parent="."]
offset_left = 480.0
offset_top = 72.0
offset_right = 576.0
offset_bottom = 120.0
theme_type_variation = &"HeaderLarge"
text = "Score: 0"
vertical_alignment = 1

[node name="NextTetrominoPicture" type="TextureRect" parent="."]
offset_left = 336.0
offset_top = 24.0
offset_right = 432.0
offset_bottom = 120.0
expand_mode = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 24.0
offset_top = 24.0
offset_right = 120.0
offset_bottom = 120.0
text = "Start"

[node name="PauseButton" type="Button" parent="."]
offset_left = 17.0
offset_top = 162.0
offset_right = 113.0
offset_bottom = 271.0
text = "Pause"

[node name="LeftButton" type="Button" parent="."]
offset_left = 44.0
offset_top = 1114.0
offset_right = 140.0
offset_bottom = 1210.0
text = "Left
"

[node name="TurnButton" type="Button" parent="."]
offset_left = 236.0
offset_top = 1114.0
offset_right = 332.0
offset_bottom = 1210.0
text = "Turn"

[node name="DownButton" type="Button" parent="."]
offset_left = 433.0
offset_top = 1116.0
offset_right = 529.0
offset_bottom = 1212.0
text = "Down"

[node name="RightButton" type="Button" parent="."]
offset_left = 626.0
offset_top = 1117.0
offset_right = 722.0
offset_bottom = 1213.0
text = "Right"

[node name="GameOverPanel" type="Panel" parent="."]
offset_left = 288.0
offset_top = 528.0
offset_right = 480.0
offset_bottom = 720.0

[node name="GameOverLable" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 192.0
theme_type_variation = &"HeaderLarge"
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="PressedTimer" to="." method="_on_pressed_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="button_down" from="LeftButton" to="." method="_on_left_button_button_down"]
[connection signal="button_up" from="LeftButton" to="." method="_on_left_button_button_up"]
[connection signal="pressed" from="TurnButton" to="." method="_on_turn_button_pressed"]
[connection signal="button_down" from="DownButton" to="." method="_on_down_button_button_down"]
[connection signal="button_up" from="DownButton" to="." method="_on_down_button_button_up"]
[connection signal="button_down" from="RightButton" to="." method="_on_right_button_button_down"]
[connection signal="button_up" from="RightButton" to="." method="_on_right_button_button_up"]
